# Change Log
All notable changes to this project will be documented in this file.

## [1.12]

### Added
   - Workbook.open: option :if_unsaved => :save
   - Workbook#color_if_modified

### Changed:
   - Workbook#save, save_as: no parameter +discoloring
   - RangeOwners#set_namevalue, set_namevalue_glob: no optional parameter for color 


## [1.11]

### Added
  - Range#==, Worksheet#== 
  - Workbook#open: options :if_blocked is synonym to :if_obstructed
  - Simplified Code

## [1.10]

### Added
  - workarounds for running in Jruby
  - Range,Cell#v

## [1.9]

### Added
  - Workbook#create
  - Excel#workbooks, each_workbook, each_workbook_with_index
  - Address#int_range,#r1c1,#a1
  - ReoCommon::RangeOwners#add_name: allowing infinite ranges

## [1.6]

### Added
  - Range#copy: options values_only, transpose

## [1.5]

### Changed
  - Range,Cell#v
  - Range,Cell: lower-letter VBA methods allowed

## [1.4.1]

### Changed
  - renamed Worksheet#name2range to ReoCommon#range

## [1.4]

### Changed
  - renamed Book to Workbook, Sheet to Worksheet
  - General#to_reo
  - Range,Cell: lower-letter VBA methods not allowed

## [1.3.1]

### Added
  - Book#open: option :excel => :reserved_new
  - ReoCommon#name2range

## [1.2.2]

### Added
  - ReoCommon#add_name, rename_range, delete_name
  - Sheet#range
  - Range#copy

### Changed:
  - ReoCommon#namevalue, namevalue_glob, set_namevalue, set_namevalue_glob replace
    set_namevalue replaces set_rangeval, set_namevalue_glob, respectively

## [1.2.1] 2018-9-2

## [1.2] - 2018-11-8

## [1.1.6] - 2018-20-7

### Added
  - Sheet#cellval
  - Sheet#set_cellval

## [1.1.5] - 2018-10-7

### Added
  - Book#unobtrusively: 
    option :writable

### Changed
  - Book#unobtrusively:
    option :rw_change_excel instead :readonly_excel

### Added

## [1.1.4] - 2018-10-6

### Added
  - Book#open: for the options: simplifiaction: :force can be left out
  - Excel#for_this_instance
  - Excel#for_all_workbooks
  - Book#for_this_workbooks