@@ -686,7 +686,10 @@ module RobustExcelOle
     # @param [String]  name  the name of the range
     # @param [Variant] value the contents of the range
     def []=(name, value)
-      set_namevalue_glob(name,value, :color => 42) # 42 - aqua-marin, 7-green
+      old_color_if_modified = workbook.color_if_modified
+      workbook.color_if_modified = 42  unless workbook.nil? # aqua-marin
+      set_namevalue_glob(name,value)
+      workbook.color_if_modified = old_color_if_modified
     end
 
     # @private
